--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2"
+  },
+  "engines": {
+    "node": "18.16.0"
   }
 }
